[package]
name = "ios-emu"
version = "0.1.0"
description = "iOS Safari Tester"
authors = []
edition = "2021"

[lib]
name = "ios_emu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ios-emu"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
